// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple comments are parsed: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Comment",
                "about": [],
                "body": "/* comment 1 */",
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Comment",
                "about": [],
                "body": "/* comment 2 */",
              },
            },
          ],
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with a named single line comment: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Comment",
                "about": [],
                "body": "/* this is a comment */",
                "declaredName": "Comment",
              },
            },
          ],
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with multi line comment: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Comment",
                "about": [],
                "body": "/* this is
             * a comment
             */",
              },
            },
          ],
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with named documentation: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Documentation",
                "about": [],
                "body": "/* this is a doc */",
                "declaredName": "Doc",
              },
            },
          ],
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with single line comment without a keyword: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Comment",
                "about": [],
                "body": "/* this is a comment */",
              },
            },
          ],
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with single line comment: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Comment",
                "about": [],
                "body": "/* this is a comment */",
              },
            },
          ],
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with textual representation with keyword and no name: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "TextualRepresentation",
          "about": [],
          "body": "/* self.x > 0.0 */",
          "language": ""OCL"",
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with textual representation with keyword: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "TextualRepresentation",
          "about": [],
          "body": "/* self.x > 0.0 */",
          "declaredName": "inOCL",
          "language": ""OCL"",
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with textual representation without keyword: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "TextualRepresentation",
                "about": [],
                "body": "/* <a href="https://plm.elsewhere.com/part?id="1234"/> */",
                "language": ""HTML"",
              },
            },
          ],
          "declaredName": "B",
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with unnamed documentation: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Documentation",
                "about": [],
                "body": "/* this is a doc */",
              },
            },
          ],
          "prefixes": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;
